--- a/src/Meme.css
+++ b/src/Meme.css
@@ -45,6 +45,13 @@
     height: 300px;
 
 }
+.tinyBox2{
+
+    width:300px;
+    height: 300px;
+    background-color: blue;
+
+}
 .tinyBox img{
     width: 100%;
     height: 100%;
