--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@font-face{
+  font-family:'sketch';
+  src:url('sketch.ttf');
+}
+
 .App {
   width:100%;
   margin:0;
@@ -5,7 +10,26 @@
   height: 100vh;
 overflow-y: auto;
 position: relative;
+background-color: rgb(255, 255, 255);
 
+}
+.titleBox{
+  margin-bottom: 70px;
+}
+
+.title{
+font-family:'sketch';
+color:rgb(0, 0, 0);
+text-align: center;
+letter-spacing: 4px;
+text-shadow: 3px 2px 3px rgb(72, 255, 0);
+transform: rotate(-10deg);
+font-size: 50px;
+cursor: pointer;
+
+}
+.title:hover{
+  color:blue;
 }
 
 .bigBox{
@@ -17,13 +41,17 @@ justify-content: space-around;
 
 .smallBox{
 width:400px;
-height: 70px;
+height: 390px;
 background-color: rgb(88, 58, 50);
 position: relative;
+margin-bottom:30px;
+cursor: pointer;
+box-shadow: 2px 2px 3px black;
 
 }
 .smallBox img {
   width:100%;
+  height: 100%;
   cursor: pointer;
 }
 
