--- a/src/Meme.css
+++ b/src/Meme.css
@@ -1,9 +1,10 @@
 .page{
-   width:100%;
-   height: 100vh; 
-   background-color: rgba(10, 10, 10, 0.37);
-   position: absolute;
+    position: fixed;
    top:0;
+   width:100%;
+   height: 100%; 
+   background-color: rgba(10, 10, 10, 0.37);
+   
 }
 .box{
     position: absolute;
